name:                heckle
version:             2.0.0.4
synopsis:            Jekyll in Haskell (feat. LaTeX)
description:         A static site generator that supports LaTeX/PDF and Markdown/HTML posts. Care has been taken to make it configurable, easy to use, and unopinionated. 
homepage:            https://github.com/2016rshah/heckle
license:             MIT
author:              Rushi Shah
maintainer:          2016rshah@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:    src
  exposed-modules:   Heckle
  build-depends:     base >= 4.7 && <5
  default-language:  Haskell2010

executable heckle
  hs-source-dirs:    heckle
  main-is:           Main.hs
  other-modules:       Files
                     , Heckle
  other-extensions:  OverloadedStrings
  build-depends:     base >=4.7 && <5
                     , blaze-html >= 0.8.1.1
                     , directory >=1.2 && <1.3
                     , process >= 1.2.0.0
                     , split >=0.2 && <0.3
                     , tagsoup >= 0.13.3
                     , dates >= 0.2.2.1
                     , pandoc >= 1.17.0.3
                     , pandoc-types >= 1.16.1
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/2016rshah/heckle.git