name:                heckle
version:             2.0.1.9
synopsis:            Jekyll in Haskell (feat. LaTeX)
description:         A static site generator that supports LaTeX-PDF and Markdown-HTML posts. Care has been taken to make it configurable, easy to use, and unopinionated.

                     To get started, check out <https://github.com/2016rshah/heckle>
                     
homepage:            https://github.com/2016rshah/heckle
license:             MIT
author:              Rushi Shah
maintainer:          2016rshah@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/2016rshah/heckle.git

library
  hs-source-dirs:    src
  exposed-modules:   Heckle
  build-depends:     base >= 4.8 && <5
                   , filepath >= 1.4.0.0
                   , blaze-html >= 0.8.1.1
                   , directory >=1.2 && <1.3
                   , process >= 1.2.0.0
                   , split >=0.2 && <0.3
                   , tagsoup >= 0.13.3
                   , pandoc >= 1.17.0.3
                   , pandoc-types >= 1.16.1
                   , time >= 1.6.0.0
  default-language:  Haskell2010

executable heckle
  hs-source-dirs:    heckle
  main-is:           Main.hs
  other-modules:     Files
  build-depends:     base >=4.8 && <5
                   , heckle
                   , directory >=1.2 && <1.3
                   , filepath >= 1.4.0.0
                   , process >= 1.2.0.0
                   , split >=0.2 && <0.3
                   , optparse-applicative >= 0.12.0.0 && <0.13.0.0
                   , optparse-generic ==1.1.*
  other-extensions:  OverloadedStrings
  default-language:  Haskell2010
